monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4027/A4027.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4027;

grammar A4027 extends de.monticore.grammar.cocos.valid.Enum {

  E;
}
